compositor doesnt mix unrendered render layers well #52113

Closed
opened 2017-07-18 18:26:12 +02:00 by Yousef Harfoush · 9 comments

System Information
windows 10 x64 , nvidia geforce 970

Blender Version
Broken: 2.78.5
Worked: 2.78c

Short description of error
compositor doesn't mix un-rendered render layers well, in 2.78c if you mix a renderedlayer to an un-rendered one it considers the un-rendered render layers as zero alpha, but now it consider it asfull white.

Exact steps for others to reproduce the error
this is in 2.78c
2.78c.jpg

this is in 2.785
2.785.jpg

**System Information** windows 10 x64 , nvidia geforce 970 **Blender Version** Broken: 2.78.5 Worked: 2.78c **Short description of error** compositor doesn't mix un-rendered render layers well, in 2.78c if you mix a **rendered**layer to an **un-rendered** one it considers the un-rendered render layers as zero alpha, but now it consider it as**full white**. **Exact steps for others to reproduce the error** this is in 2.78c ![2.78c.jpg](https://archive.blender.org/developer/F670983/2.78c.jpg) this is in 2.785 ![2.785.jpg](https://archive.blender.org/developer/F670992/2.785.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @bat3a

Added subscriber: @bat3a

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

Not squre what the issue is here, one way or the other unrendered layer is by definition invalid and more or less undetermined, random data… Changes in how we show here does not really matter imho? @Sergey should know better though.

Not squre what the issue is here, one way or the other unrendered layer is by definition invalid and more or less undetermined, random data… Changes in how we show here does not really matter imho? @Sergey should know better though.
Author
Member

even so, there is a certain behavior that has changed between the two versions, which means old files won't render the same way, and needs to incorporate new ways to work around them and without any new benefits!

now i need to render each empty layer to an empty alpha before mixing, and that can be troublesome with many layers and time consuming, or remix layers before each render shot which still time consuming.

even so, there is a certain behavior that has changed between the two versions, which means old files won't render the same way, and needs to incorporate new ways to work around them and without any new benefits! now i need to render each empty layer to an empty alpha before mixing, and that can be troublesome with many layers and time consuming, or remix layers before each render shot which still time consuming.
Author
Member

Any news on the possibility getting the old behavior?

Now i have to render ALL render layers in the composite tree -which adds 1min for each empty renderlayer- to get the previous result, and 2.79 is needed because of the denoiser.

Any news on the possibility getting the old behavior? Now i have to render ALL render layers in the composite tree -which adds 1min for each empty renderlayer- to get the previous result, and 2.79 is needed because of the denoiser.

This issue was referenced by 04800ed434

This issue was referenced by 04800ed43434d053359cb3035eb082902fe80e4b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

thanks, old behavior is BACK.

thanks, old behavior is BACK.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52113
No description provided.